added a new line @ 13

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello, world!</h1>
 
 <div>This is Sam's test</div>
-
+<div>This is Erick's test</div>
 <div>This is a test</div>
 
     <h1>Jonathan</h1>
