Hopeully this works

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello, world!</h1>
 
 <div>This is Sam's test</div>
-
+<p>This is a new line that doesn't conflict with anything!</p>
 <div>This is a test</div>
 
     <h1>Jonathan</h1>
