saved user data to firebase

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
             <input class="user-input" type="text" id="dob-input-year" placeholder="YYYY">.
         </h1>
     </div>
+    <div id="results-container"></div>
+    <div id="button-container"></div>
 
 
-
+    <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     <script
         src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
