made api calls with buttons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         .user-input {
             width: 40px;
         }
+
+        .user-button {
+            border: 2px solid black;
+            padding: 3px;
+            text-align: center;
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
