made on load fade animation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
             text-align: center;
             display: inline-block;
         }
+
+        html {
+            animation: pulse 2s;
+        }
+
+        @keyframes pulse {
+            0% {
+                background-color: gray;
+            }
+            100% {
+                background-color: white;
+            }
+        }
     </style>
 </head>
 <body>
