--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 
