--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
     <title>Hello, world</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -11,15 +13,12 @@
             font-family: arial;
         }
 
-        .user-input {
-            width: 40px;
-        }
-
         .user-button {
             border: 2px solid black;
             padding: 3px;
             text-align: center;
             display: inline-block;
+            margin: 5px 5px 0px;
         }
 
         html {
@@ -41,10 +40,8 @@
 
     <div id="sentence-container">
         <h1>My name is
-            <input type="text" id="name-input">. I was born on
-            <input class="user-input" type="text" id="dob-input-month" placeholder="MM">
-            <input class="user-input" type="text" id="dob-input-day" placeholder="DD">
-            <input class="user-input" type="text" id="dob-input-year" placeholder="YYYY">.
+            <input type="text" id="name-input" required>. I was born on
+            <input class="user-input" type="date" id="date" name="birthday" min="1800-04-01" max="2018-04-30" required>
         </h1>
     </div>
     <div id="results-container"></div>
@@ -54,7 +51,38 @@
 
     <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="config.js"></script>
     <script src="script.js"></script>
+
+    <script type="text/javascript">
+        // FirebaseUI config.
+        var uiConfig = {
+            signInOptions: [
+                {
+                    provider: firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                    scopes: [
+                        'https://www.googleapis.com/auth/plus.login'
+                    ],
+                    customParameters: {
+                        // Forces account selection even when one account
+                        // is available.
+                        prompt: 'select_account'
+                    }
+                },
+                // Leave the lines as is for the providers you want to offer your users.
+                firebase.auth.GithubAuthProvider.PROVIDER_ID
+            ],
+            // Terms of service url.
+            tosUrl: '<your-tos-url>'
+        };
+
+        // Initialize the FirebaseUI Widget using Firebase.
+        var ui = new firebaseui.auth.AuthUI(firebase.auth());
+        // The start method will wait until the DOM is loaded.
+        ui.start('#firebaseui-auth-container', uiConfig);
+    </script>
+    <div id="firebaseui-auth-container"></div>
+
 </body>
 
 </html>
