--- a/index.html
+++ b/index.html
@@ -228,8 +228,31 @@
 							</div> <!-- End of .actions -->
 							<div class="clear"></div>
 						</div> <!-- End of .box -->
-					</div> <!-- End of .grid_4 -->
+					</div> <!-- End of .grid_2 -->
 
+					<div class="grid_2">
+						<div class="box">
+							<div class="header">
+								<img src="images/list.png" alt="" width="16"
+								height="16">
+								<h3>Login</h3>
+							</div>
+							<div class="content">
+								<!-- <div class="alert warning no-margin top">
+									<span class="icon"></span>5 Saved Sessions Limit.
+								</div> -->
+								<ul class="stats-list">
+									<li>
+										<a href="#">Sam 10/04/1993</a>
+									</li>
+									<li>
+										<a href="#">Jonathan 10/04/1993</a>
+									</li>
+								</ul>
+							</div> <!-- End of .content -->
+							<div class="clear"></div>
+						</div> <!-- End of .box -->
+					</div> <!-- End of .grid_2 -->
 				</div> <!-- End of #main_content -->
 				<div class="push clear"></div>
 					
@@ -257,7 +280,8 @@
 		
 		<!-- Great script site warns loads slow for locale devleopment -->
 		<!-- Verified loads slow on local but actially speeds up loading on server, script is fine -->
-		 <script defer src="js/jquery-ui-2.1.1.js"></script> <!-- REQUIRED: for rounded panels and icons -->
+		<script defer src="js/jquery-ui-2.1.1.js"></script> <!-- REQUIRED: for rounded panels and icons -->
+		<script defer src="js/jquery-ui-2.1.1.js"></script> <!-- REQUIRED: for rounded panels and icons -->
 		<!-- end scripts -->
 	</body>
 </html>
