--- a/index.html
+++ b/index.html
@@ -228,20 +228,8 @@
 							<div class="alert warning no-margin top">
 								<span class="icon"></span>5 Saved Sessions Limit.
 							</div>
-							<ul class="stats-list" id="#button-container">
-								<li>
-									<a href="#">Sam 10/04/1993</a>
-								</li>
-								<li>
-									<a href="#">Jonathan 10/04/1993</a>
-								</li>
-								<li>
-									<a href="#">Zach 10/04/1993</a>
-								</li>
-								<li>
-									<a href="#">Erick 10/04/1993</a>
-								</li>
-							</ul>
+							<div id="#button-container">
+							</div>
 						</div>
 						<!-- End of .content -->
 						<div class="actions">
