Updated logout procedure

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<a href="https://www.wordsapi.com/">Words API</a>
 								</li>
 								<li>
-									<a href="#">Logout</a>
+									<a id="logout">Logout</a>
 								</li>
 							</ul>
 						</li>
