Updated button location

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 					<p>
 						Enter interesting information about API's used in the project.
 					</p>
+					<div id="button-container"></div>
 					<div class="divider"></div>
 				</div>
 			</aside>
@@ -227,8 +228,6 @@
 						<div class="content">
 							<div class="alert warning no-margin top">
 								<span class="icon"></span>5 Saved Sessions Limit.
-							</div>
-							<div id="#button-container">
 							</div>
 						</div>
 						<!-- End of .content -->
