--- a/index.html
+++ b/index.html
@@ -225,10 +225,7 @@
 							<img src="images/list.png" alt="" width="16" height="16">
 							<h3>Saved Sessions</h3>
 						</div>
-						<div class="content">
-							<div class="alert warning no-margin top">
-								<span class="icon"></span>5 Saved Sessions Limit.
-							</div>
+						<div class="content" id="button-container">
 						</div>
 						<!-- End of .content -->
 						<div class="actions">
@@ -278,7 +275,7 @@
 		<div class="container_12">
 			UNC Coding Bootcamp - Project 1, Team 5 - "Hello World"
 		</div>
-<div id="button-container"></div>
+<
 	</footer>
 	<!-- End of project footer-->
 
