--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- REQUIRED: Header styling -->
 	<link rel="stylesheet" href="css/navigation.css">
 	<!-- REQUIRED: Navigation styling -->
-	<link rel="stylesheet" href="css/sidebar.css">
+	<!-- <link rel="stylesheet" href="css/sidebar.css"> -->
 	<!-- OPTIONAL: Sidebar -->
 	<link rel="stylesheet" href="css/content.css">
 	<!-- REQUIRED: Content styling -->
@@ -34,7 +34,7 @@
 	<!-- SPRITE: Forms styling -->
 	<link rel="stylesheet" href="css/sprite.lists.css">
 	<!-- SPRITE: Lists styling -->
-	<link rel="stylesheet" href="css/icons.css">
+	<!-- <link rel="stylesheet" href="css/icons.css"> -->
 	<!-- Icons -->
 	<!-- Styling of JS plugins -->
 	<link rel="stylesheet" href="css/external/jquery-ui-1.8.16.custom.css">
@@ -126,7 +126,7 @@
 						and will not be shared or sold to third parties.
 					</div>
 
-					<div class="box">
+					<div class="box instructions">
 						<div class="content no-padding">
 							<div class="step">
 								<span>1</span>
@@ -170,7 +170,7 @@
 				<div class="clear"></div>
 
 				<!-- Start of User Entry Panel -->
-				<div class="grid_4">
+				<div class="grid_4 user-entry">
 					<div class="box">
 						<div class="header">
 							<img src="images/document--plus.png" alt="" width="16" height="16">
@@ -219,11 +219,11 @@
 				</div>
 				<!-- End of .grid_4 -->
 
-				<div class="grid_4">
+				<div class="grid_4 saved-searches">
 					<div class="box">
 						<div class="header">
 							<img src="images/list.png" alt="" width="16" height="16">
-							<h3>Saved Sessions</h3>
+							<h3>Saved Searches</h3>
 						</div>
 						<div class="content" id="button-container">
 						</div>
@@ -241,7 +241,7 @@
 				</div>
 				<!-- End of .grid_2 -->
 
-				<div class="grid_4">
+				<div class="grid_4 login-box">
 					<div class="box">
 						<div class="header">
 							<img src="images/list.png" alt="" width="16" height="16">
