removed placeholder anchors

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<!-- Start of the main navigation -->
 					<ul id="nav_main">
 						<li class="current">
-							<a href="#">
+							<a >
 								<img src="images/computer-imac.png" width=25 height=25 alt=""> Dashboard
 							</a>
 							<ul>
@@ -96,7 +96,7 @@
 							<div class="avatar">
 								<img src="images/blank.png" width="204" height="80" alt="">
 							</div>
-							<a href="#">No Gender</a>
+							<a >No Gender</a>
 						</div>
 						<div class="clear"></div>
 					</div>
@@ -131,7 +131,7 @@
 							<div class="step">
 								<span>1</span>
 								<div class="circle"></div>
-								<a href="#">
+								<a >
 									<strong>First Name</strong>
 									<small>
 										Enter only your first name
@@ -142,7 +142,7 @@
 							<div class="step">
 								<span>2</span>
 								<div class="circle"></div>
-								<a href="#">
+								<a >
 									<strong>Birthdate</strong>
 									<small>
 										Enter your or select your
@@ -153,7 +153,7 @@
 							<div class="step">
 								<span>3</span>
 								<div class="circle"></div>
-								<a href="#">
+								<a >
 									<strong>Results</strong>
 									<small>
 										View your results in below
@@ -206,10 +206,10 @@
 							<!-- End of .content -->
 							<div class="actions">
 								<div class="actions-left">
-									<a class="button" href="#">Clear All Fields</a>
+									<a class="button" id="clear-fields">Clear All Fields</a>
 								</div>
 								<div class="actions-right">
-									<a class="button" href="#">Search</a>
+									<a class="button" id="search">Search</a>
 								</div>
 							</div>
 							<!-- End of .actions -->
@@ -231,7 +231,7 @@
 						<div class="actions">
 							<div class="actions-left"></div>
 							<div class="actions-right">
-								<a class="button" href="#">Delete All Records</a>
+								<a class="button" id="delete-all">Delete All Records</a>
 							</div>
 						</div>
 						<!-- End of .actions -->
