Added back list to create buttons

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 							<img src="images/list.png" alt="" width="16" height="16">
 							<h3>Saved Searches</h3>
 						</div>
-						<div class="content" id="button-container">
-						</div>
+						<ul class="stats-list" id="button-container">
+						</ul>
 						<!-- End of .content -->
 						<div class="actions">
 							<div class="actions-left"></div>
