added ids to buttons

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 					<div class="box instructions">
 						<div class="content no-padding">
-							<div class="step">
+							<div id="step-1" class="step">
 								<span>1</span>
 								<div class="circle"></div>
 								<a >
@@ -139,7 +139,7 @@
 									</small>
 								</a>
 							</div>
-							<div class="step">
+							<div id="step-2" class="step">
 								<span>2</span>
 								<div class="circle"></div>
 								<a >
@@ -150,7 +150,7 @@
 									</small>
 								</a>
 							</div>
-							<div class="step">
+							<div id="step-3" class="step">
 								<span>3</span>
 								<div class="circle"></div>
 								<a >
