--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- REQUIRED: Header styling -->
 	<link rel="stylesheet" href="css/navigation.css">
 	<!-- REQUIRED: Navigation styling -->
-	<link rel="stylesheet" href="css/sidebar.css">
+	<!-- <link rel="stylesheet" href="css/sidebar.css"> -->
 	<!-- OPTIONAL: Sidebar -->
 	<link rel="stylesheet" href="css/content.css">
 	<!-- REQUIRED: Content styling -->
@@ -34,7 +34,7 @@
 	<!-- SPRITE: Forms styling -->
 	<link rel="stylesheet" href="css/sprite.lists.css">
 	<!-- SPRITE: Lists styling -->
-	<link rel="stylesheet" href="css/icons.css">
+	<!-- <link rel="stylesheet" href="css/icons.css"> -->
 	<!-- Icons -->
 	<!-- Styling of JS plugins -->
 	<link rel="stylesheet" href="css/external/jquery-ui-1.8.16.custom.css">
@@ -64,7 +64,7 @@
 					<!-- Start of the main navigation -->
 					<ul id="nav_main">
 						<li class="current">
-							<a href="#">
+							<a>
 								<img src="images/computer-imac.png" width=25 height=25 alt=""> Dashboard
 							</a>
 							<ul>
@@ -96,7 +96,7 @@
 							<div class="avatar">
 								<img src="images/blank.png" width="204" height="80" alt="">
 							</div>
-							<a href="#">No Gender</a>
+							<a>No Gender</a>
 						</div>
 						<div class="clear"></div>
 					</div>
@@ -106,7 +106,7 @@
 					<p>
 						Enter interesting information about API's used in the project.
 					</p>
-					
+
 					<div class="divider"></div>
 				</div>
 			</aside>
@@ -126,12 +126,12 @@
 						and will not be shared or sold to third parties.
 					</div>
 
-					<div class="box">
+					<div class="box instructions">
 						<div class="content no-padding">
-							<div class="step">
+							<div id="step-1" class="step" value="name-input">
 								<span>1</span>
 								<div class="circle"></div>
-								<a href="#">
+								<a>
 									<strong>First Name</strong>
 									<small>
 										Enter only your first name
@@ -139,10 +139,10 @@
 									</small>
 								</a>
 							</div>
-							<div class="step">
+							<div id="step-2" class="step" value="date">
 								<span>2</span>
 								<div class="circle"></div>
-								<a href="#">
+								<a>
 									<strong>Birthdate</strong>
 									<small>
 										Enter your or select your
@@ -150,10 +150,10 @@
 									</small>
 								</a>
 							</div>
-							<div class="step">
+							<div id="step-3" class="step" value="results-container">
 								<span>3</span>
 								<div class="circle"></div>
-								<a href="#">
+								<a>
 									<strong>Results</strong>
 									<small>
 										View your results in below
@@ -170,7 +170,7 @@
 				<div class="clear"></div>
 
 				<!-- Start of User Entry Panel -->
-				<div class="grid_4">
+				<div class="grid_4 user-entry">
 					<div class="box">
 						<div class="header">
 							<img src="images/document--plus.png" alt="" width="16" height="16">
@@ -206,10 +206,10 @@
 							<!-- End of .content -->
 							<div class="actions">
 								<div class="actions-left">
-									<a class="button" href="#">Clear All Fields</a>
+									<a class="button" id="clear-fields">Clear All Fields</a>
 								</div>
 								<div class="actions-right">
-									<a class="button" href="#">Search</a>
+									<a class="button" id="search">Search</a>
 								</div>
 							</div>
 							<!-- End of .actions -->
@@ -219,19 +219,19 @@
 				</div>
 				<!-- End of .grid_4 -->
 
-				<div class="grid_4">
+				<div class="grid_4 saved-searches">
 					<div class="box">
 						<div class="header">
 							<img src="images/list.png" alt="" width="16" height="16">
-							<h3>Saved Sessions</h3>
+							<h3>Saved Searches</h3>
 						</div>
-						<div class="content" id="button-container">
-						</div>
+						<ul class="stats-list" id="button-container">
+						</ul>
 						<!-- End of .content -->
 						<div class="actions">
 							<div class="actions-left"></div>
 							<div class="actions-right">
-								<a class="button" href="#">Delete All Records</a>
+								<a class="button" id="delete-all">Delete All Records</a>
 							</div>
 						</div>
 						<!-- End of .actions -->
@@ -241,7 +241,7 @@
 				</div>
 				<!-- End of .grid_2 -->
 
-				<div class="grid_4">
+				<div class="grid_4 login-box">
 					<div class="box">
 						<div class="header">
 							<img src="images/list.png" alt="" width="16" height="16">
@@ -275,29 +275,28 @@
 		<div class="container_12">
 			UNC Coding Bootcamp - Project 1, Team 5 - "Hello World"
 		</div>
-<
-	</footer>
-	<!-- End of project footer-->
+		< </footer>
+			<!-- End of project footer-->
 
 
-	<!-- JavaScript at the bottom for fast page loading -->
-	<!-- Grab Google CDN's jQuery + jQueryUI, with a protocol relative URL; fall back to local concept applied -->
-	<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
+			<!-- JavaScript at the bottom for fast page loading -->
+			<!-- Grab Google CDN's jQuery + jQueryUI, with a protocol relative URL; fall back to local concept applied -->
+			<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
 	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.js"><\/script>')</script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 	<script>window.jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.16.min.js"><\/script>')</script> -->
 
-	<!-- Great script site warns loads slow for locale devleopment -->
-	<!-- Verified loads slow on local but actially speeds up loading on server, script is fine -->
-	<!-- <script defer src="js/jquery-ui-2.1.1.js"></script> -->
-	<!-- REQUIRED: for rounded panels and icons -->
-	<!-- <script defer src="js/jquery-ui-2.1.1.js"></script> -->
-	<!-- REQUIRED: for rounded panels and icons -->
-	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-	<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-	<script src="config.js"></script>
-	<script src="script.js"></script>
-	<!-- end scripts -->
+			<!-- Great script site warns loads slow for locale devleopment -->
+			<!-- Verified loads slow on local but actially speeds up loading on server, script is fine -->
+			<!-- <script defer src="js/jquery-ui-2.1.1.js"></script> -->
+			<!-- REQUIRED: for rounded panels and icons -->
+			<!-- <script defer src="js/jquery-ui-2.1.1.js"></script> -->
+			<!-- REQUIRED: for rounded panels and icons -->
+			<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+			<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+			<script src="config.js"></script>
+			<script src="script.js"></script>
+			<!-- end scripts -->
 </body>
 
 </html>
