"Added splash page"

--- a/index.html
+++ b/index.html
@@ -44,12 +44,17 @@
 	<!-- More ideas for the basic interface -->
 	<link rel="stylesheet" href="css/sidebar.css">
 	<!-- TODO: Remove this line! -->
+
+	<link rel="stylesheet" href="css/script.css">
 	<script src="js/libs/modernizr-2.0.6.min.js"></script>
 	<script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
 </head>
 
 <body>
+	<div id="splash">
+		<div id="welcome-text">Well, hello there...</div>
+	</div>
 	<div id="height-wrapper">
 		<header>
 			<div id="header_toolbar">
@@ -64,7 +69,7 @@
 					<!-- Start of the main navigation -->
 					<ul id="nav_main">
 						<li class="current">
-							<a >
+							<a>
 								<img src="images/computer-imac.png" width=25 height=25 alt=""> Dashboard
 							</a>
 							<ul>
@@ -96,7 +101,7 @@
 							<div class="avatar">
 								<img src="images/blank.png" width="204" height="80" alt="">
 							</div>
-							<a >No Gender</a>
+							<a>No Gender</a>
 						</div>
 						<div class="clear"></div>
 					</div>
