bug/type fixes, added new link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 									<a href="https://github.com/jonathantcallahan/project-1" target="_blank">Project Repo</a>
 								</li>
 								<li>
-									<a href="https://www.wordsapi.com/">Words API</a>
+									<a href="https://www.wordsapi.com/" target="_blank">Words API</a>
+								</li>
+								<li>
+									<a href="http://history.muffinlabs.com/" target="_blank">History API</a>
 								</li>
 								<li>
 									<a id="logout">Logout</a>
