Last minute changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 	<link rel="stylesheet" href="css/sprite.forms.css">
 	<!-- SPRITE: Forms styling -->
 	<link rel="stylesheet" href="css/sprite.lists.css">
-
 	<link rel="stylesheet" href="css/sidebar.css">
 	<link rel="stylesheet" href="css/script.css">
 
@@ -56,7 +55,6 @@
 			<!-- Start of the main header bar -->
 			<nav id="header_main">
 				<div class="container_12">
-					<!-- Start of the main navigation -->
 					<ul id="nav_main">
 						<li class="current">
 							<a>
@@ -78,7 +76,6 @@
 							</ul>
 						</li>
 					</ul>
-					<!-- End of the main navigation -->
 				</div>
 			</nav>
 			<div id="nav_sub"></div>
@@ -86,13 +83,6 @@
 
 		<!-- Start of the content -->
 		<div role="main" class="container_12" id="content-wrapper">
-			<!-- Start of the sidebar -->
-			<aside>
-
-			</aside>
-			<!-- End of the sidebar-->
-
-			<!-- Start of the main content -->
 			<div id="main_content">
 
 				<h2 class="grid_12">Results Dashboard</h2>
@@ -142,15 +132,11 @@
 								</a>
 							</div>
 						</div>
-						<!-- End of .content -->
 					</div>
-					<!-- End of .box -->
 				</div>
-				<!-- End of .grid_12 -->
 				<div class="clear">
 				</div>
 
-				<!-- Start of User Entry Panel -->
 				<div class="grid_4 user-entry">
 					<div class="box">
 						<div class="header">
@@ -184,7 +170,6 @@
 									</div>
 								</div>
 							</div>
-							<!-- End of .content -->
 							<div class="actions">
 								<div class="actions-left">
 									<a class="button" id="clear-fields">Clear All Fields</a>
@@ -193,12 +178,9 @@
 									<a class="button" id="search">Search</a>
 								</div>
 							</div>
-							<!-- End of .actions -->
 						</form>
 					</div>
-					<!-- End of .box -->
 				</div>
-				<!-- End of .grid_4 -->
 
 				<div class="grid_4 saved-searches">
 					<div class="box">
@@ -208,19 +190,15 @@
 						</div>
 						<ul class="stats-list" id="button-container">
 						</ul>
-						<!-- End of .content -->
 						<div class="actions">
 							<div class="actions-left"></div>
 							<div class="actions-right">
 								<a class="button" id="delete-all">Delete All Records</a>
 							</div>
 						</div>
-						<!-- End of .actions -->
 						<div class="clear"></div>
 					</div>
-					<!-- End of .box -->
 				</div>
-				<!-- End of .grid_2 -->
 
 				<div class="grid_4 login-box">
 					<div class="box">
@@ -229,22 +207,13 @@
 							<h3>Login</h3>
 						</div>
 						<div class="content">
-							<!-- <div class="alert warning no-margin top">
-									<span class="icon"></span>5 Saved Sessions Limit.
-								</div> -->
 							<div id="firebaseui-auth-container"></div>
 						</div>
-						<!-- End of .content -->
 						<div class="clear"></div>
 					</div>
-					<!-- End of .box -->
 				</div>
-				<!-- End of .grid_2 -->
 			</div>
-			<!-- End of #main_content -->
-
 		</div>
-		<!-- End of #content-wrapper -->
 		<div class="clear"></div>
 	</div>
 
@@ -254,27 +223,13 @@
 			UNC Coding Bootcamp - Project 1, Team 5 - "Hello World"
 		</div>
 	</footer>
-	<!-- End of project footer-->
-
-
-	<!-- JavaScript at the bottom for fast page loading -->
-	<!-- Grab Google CDN's jQuery + jQueryUI, with a protocol relative URL; fall back to local concept applied -->
-	<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js"></script>
-	<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.js"><\/script>')</script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-	<script>window.jQuery.ui || document.write('<script src="js/libs/jquery-ui-1.8.16.min.js"><\/script>')</script> -->
-
-	<!-- Great script site warns loads slow for locale devleopment -->
-	<!-- Verified loads slow on local but actially speeds up loading on server, script is fine -->
-	<!-- <script defer src="js/jquery-ui-2.1.1.js"></script> -->
-	<!-- REQUIRED: for rounded panels and icons -->
-	<!-- <script defer src="js/jquery-ui-2.1.1.js"></script> -->
-	<!-- REQUIRED: for rounded panels and icons -->
-	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-	<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
-	<script src="config.js"></script>
-	<script src="script.js"></script>
-	<!-- end scripts -->
+		
+		<!-- Required scripts -->		
+		<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+		<script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
+		<script src="config.js"></script>
+		<script src="script.js"></script>
+		<!-- end scripts -->
 </body>
 
 </html>
