--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 	<link rel="stylesheet" href="css/sidebar.css">
 	<link rel="stylesheet" href="css/script.css">
+	<link rel="stylesheet" href="css/jonathan.css">
+	
 
 	<!-- Load Firebase -->
 	<script src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
@@ -151,7 +153,7 @@
 				</div>
 
 				<!-- Start of User Entry Panel -->
-				<div class="grid_4 user-entry">
+				<div class="grid_4 user-entry resp-box">
 					<div class="box">
 						<div class="header">
 							<img src="images/document--plus.png" alt="" width="16" height="16">
@@ -200,7 +202,7 @@
 				</div>
 				<!-- End of .grid_4 -->
 
-				<div class="grid_4 saved-searches">
+				<div class="grid_4 saved-searches resp-box">
 					<div class="box">
 						<div class="header">
 							<img src="images/list.png" alt="" width="16" height="16">
@@ -222,7 +224,7 @@
 				</div>
 				<!-- End of .grid_2 -->
 
-				<div class="grid_4 login-box">
+				<div class="grid_4 login-box resp-box">
 					<div class="box">
 						<div class="header">
 							<img src="images/list.png" alt="" width="16" height="16">
