--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 									<a href="http://history.muffinlabs.com/" target="_blank">History API</a>
 								</li>
 								<li>
+									<a href="https://www.flickr.com/services/api/flickr.photos.search.html" target="_blank">Flickr API</a>
+								</li>
+								<li>
 									<a id="logout">Logout</a>
 								</li>
 							</ul>
