appended image response from flickr api to response div

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 									</label>
 									<div>
 										<textarea cols="40" rows="10" class="required" name="resultsfield" id="results-container"></textarea>
+										<div id="randomimg"></div>
 									</div>
 								</div>
 							</div>
@@ -255,6 +256,7 @@
 		<div class="container_12">
 			UNC Coding Bootcamp - Project 1, Team 5 - "Hello World"
 		</div>
+		
 	</footer>
 	<!-- End of project footer-->
 
